<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/text_firstName"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:text="@string/firstName"
        app:layout_constraintBottom_toBottomOf="@+id/textEdit_firstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textEdit_firstName" />

    <EditText
        android:id="@+id/textEdit_firstName"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:hint="@string/firstName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_firstName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_lastName"
        android:layout_width="70dp"
        android:layout_height="22dp"
        android:layout_marginStart="12dp"
        android:text="@string/lastName"
        app:layout_constraintBottom_toBottomOf="@+id/textEdit_lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textEdit_lastName"
        app:layout_constraintVertical_bias="0.555" />

    <EditText
        android:id="@+id/textEdit_lastName"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/lastName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEdit_firstName" />


    <TextView
        android:id="@+id/text_birthday"
        android:layout_width="67dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:text="@string/birthdate"
        app:layout_constraintBottom_toBottomOf="@+id/textEdit_birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textEdit_birthday" />

    <EditText
        android:id="@+id/textEdit_birthday"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:inputType="date"
        android:hint="@string/dateExemple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEdit_lastName" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="67dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/textEdit_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textEdit_username" />

    <EditText
        android:id="@+id/textEdit_username"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEdit_birthday" />


    <TextView
        android:id="@+id/text_password"
        android:layout_width="67dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/textEdit_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textEdit_password" />

    <EditText
        android:id="@+id/textEdit_password"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEdit_username" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="338dp"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>