<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".persistence.FilePersistenceActivity">


    <GridLayout
        android:id="@+id/gridLayout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textAlignment="center"
            android:text="@string/tv_texte" />

        <EditText
            android:id="@+id/et_persistence_file_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="3"
            android:inputType="text" />
    </GridLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_persistence_file_save"
            android:text="@string/save_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/btn_persistence_file_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/display_text" />

        <Button
            android:id="@+id/btn_persistence_file_delete"
            android:text="@string/delete_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>