<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".persistence.SharedPreferenceActivity">

    <GridLayout
        android:id="@+id/gridLayout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textAlignment="center"
            android:text="@string/tv_email" />

        <EditText
            android:id="@+id/et_shared_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="3"
            android:inputType="textEmailAddress" />
    </GridLayout>


    <GridLayout
        android:id="@+id/gridLayout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout_email">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_columnWeight="1"
            android:text="@string/tv_password" />

        <EditText
            android:id="@+id/et_shared_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:layout_columnWeight="3"
            android:inputType="textPassword" />
    </GridLayout>

    <CheckBox
        android:id="@+id/cb_shared_remenberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/remenberMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout_password" />

    <Button
        android:id="@+id/btn_shared_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_shared_remenberMe"
        app:layout_constraintVertical_bias="0.355"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>