<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->

<!--        <TextView-->
<!--            android:id="@+id/text_username"-->
<!--            android:text="@string/username"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"/>-->

<!--        <EditText-->
<!--            android:id="@+id/textEdit_username"-->
<!--            android:hint="@string/username"-->
<!--            android:inputType="text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"/>-->

<!--    </LinearLayout>-->


    <TextView
        android:id="@+id/text_username"
        android:layout_width="117dp"
        android:layout_height="0dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="9dp"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/textEdit_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textEdit_password"
        android:hint="@string/password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="120dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/textEdit_password"
        app:layout_constraintStart_toStartOf="@+id/textEdit_password"
        app:layout_constraintTop_toBottomOf="@+id/textEdit_username" />

    <EditText
        android:id="@+id/textEdit_username"
        android:hint="@string/username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="62dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_username" />

<!--   FOR BUTTONS -->
<!--    <RelativeLayout-->
<!--        android:layout_width=""-->
<!--        android:layout_height=""></RelativeLayout>-->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="338dp"
        android:layout_height="0dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="237dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEdit_password">

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

